# grimoire

./: .bash_history  Cargo.toml
src/: drag_plugin.rs  grimoire.rs  input.rs  interface.rs  main.rs  parse_json.rs  server.rs
src/grimoire/: components.rs  draw.rs  mod.rs  parse_json.rs  render.rs
src/interface/: gui.rs
src/interface_plugin/: gui.rs  mod.rs  toolbox.rs
src/server/: handler.rs  mod.rs
src/ui/: gui.rs  mod.rs  toolbox.rs
