[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_imports = "allow"
dead_code = "allow"

[dependencies]
actix-web = "4.14.0"
async-channel = "2.5.0"
bevy = { version = "0.19.0", features = ["bevy_dev_tools", "dynamic_linking"] }
bevy_egui = "0.41.0"
bevy_pancam = "0.21.0"
boolenum = "0.1.0"
egui = "0.35.0"
env_logger = "0.11.11"
parking_lot = "0.12.5"
serde = "1.0.228"
serde_json = "1.0.150"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
