[package]
name = "grimoire"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_imports = "allow"
dead_code = "allow"

[dependencies]
bevy = { version = "0.19.0", features = ["bevy_dev_tools", "dynamic_linking"] }
bevy_egui = "0.41.0"
bevy_pancam = "0.21.0"
boolenum = "0.1.0"
egui = "0.35.0"
env_logger = "0.11.11"
parking_lot = "0.12.5"
serde = "1.0.228"
serde_json = "1.0.150"
bevy_hyper = {path="../bevy_hyper"}
bevy_color = "0.19.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
